[package]
name = "example-app-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
atlas-common = { path = "../../../Atlas-Common", features = ["serialize_serde"] }
atlas-client = { path = "../../../Atlas-Client", features = ["serialize_serde"] }
atlas-communication = { path = "../../../Atlas-Communication", features = ["serialize_serde"] }
atlas-comm-mio = { path = "../../../Atlas-Comm-MIO" }
atlas-core = { path = "../../../Atlas-Core", features = ["serialize_serde"] }
atlas-smr-core = { path = "../../../Atlas-SMR-Core" }
atlas-reconfiguration = { path = "../../../Atlas-Reconfiguration", features = ["serialize_serde"] }
atlas-default-configs = { path = "../../../Atlas-Tools/atlas-default-configs" }
atlas-smr-application = { path = "../../../Atlas-SMR-Application" }
example-app = { path = "../example-app" }

config = "0"
serde = { version = "1", features = ["derive"] }

rustls = "0.22"
rustls-pemfile = "2"