[package]
name = "example-app-replica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas-default-configs = { path = "../../../Atlas-Tools/atlas-default-configs" }

atlas-common = { path = "../../../Atlas-Common", features = ["serialize_serde"] }
atlas-smr-application = { path = "../../../Atlas-SMR-Application" }
atlas-core = { path = "../../../Atlas-Core", features = ["serialize_serde"] }
atlas-decision-log = { path = "../../../Atlas-Decision-Log", features = ["serialize_serde"] }
atlas-view-transfer = { path = "../../../Atlas-View-Transfer", features = ["serialize_serde"] }
atlas-log-transfer = { path = "../../../Atlas-Log-Transfer", features = ["serialize_serde"] }
febft-state-transfer = { path = "../../../../febft/febft-state-transfer", features = ["serialize_serde"] }
atlas-persistent-log = { path = "../../../Atlas-Persistent-Log", features = ["serialize_serde"] }
atlas-reconfiguration = { path = "../../../Atlas-Reconfiguration", features = ["serialize_serde"] }
atlas-communication = { path = "../../../Atlas-Communication", features = ["serialize_serde"] }
atlas-comm-mio = { path = "../../../Atlas-Comm-MIO"}
atlas-smr-replica = { path = "../../../Atlas-SMR-Replica", features = ["serialize_serde"] }
atlas-smr-execution = { path = "../../../Atlas-SMR-Execution" }
atlas-smr-core = {path = "../../../Atlas-SMR-Core"}

config = { version = "0.13.3", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4.9", features = ["derive"] }

example-app = { path = "../example-app" }
log = "0.4.20"

[dependencies.febft-pbft-consensus]
path = "../../../../febft/febft-pbft-consensus"
features = ["serialize_serde"]